# AirSensorExternalESP32

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  sdkconfig  sdkconfig.esp32
docs/: external_sensor_cover.stl
docs/BeetleC3/: PMSensorCoverExternalDFRobot.scad  PMSensorCoverExternalDFRobot.stl  PMSensorFrameExternalDFRobot.scad  PMSensorFrameExternalDFRobot.stl  Schematics.md
docs/Lolin32-lite/: Schematics.md  external_sensor_cover.scad  external_sensor_frame.scad  external_sensor_frame.stl
main/: AppConfig.cpp.example  AppConfig.h  AppMain.cpp  ArduinoStubs.cpp  CMakeLists.txt  DustMonitorController.cpp  DustMonitorController.h  EspNowTransport.cpp  EspNowTransport.h  HardwareSensorControl.h  PTHProvider.cpp  PTHProvider.h  SPS30DataProvider.cpp  SPS30DataProvider.h  SlidingAverage.h
main/esp32/: AppConfig.cpp.example  DustMonitorController.cpp  HardwareSensorControl.cpp  HardwareSensorControl.h  sdkconfig
main/esp32c3/: AppConfig.cpp.example  DustMonitorController.cpp  HardwareSensorControl.cpp  HardwareSensorControl.h
